dts updated template

--- a/app/cv/template.hbs
+++ b/app/cv/template.hbs
@@ -1,15 +1,15 @@
 <div class="me">
-  <img src="/imgs/me.png" />
-  <h1>Tony</h1>
+  <img src="/imgs/me.jpg" />
+  <h1>David</h1>
   <div class="contact row spacer">
     <div class="col-xs-12 col-sm-3">
-      <abr title="Location">{{fa-icon "map-marker fa-fw"}}</abr> NYC
+      <abr title="Location">{{fa-icon "map-marker fa-fw"}}</abr> London
     </div>
     <div class="col-xs-12 col-sm-3">
-      <abr title="Email">{{fa-icon "envelope fa-fw"}}</abr> <a href="mailto:tony+website@varblob.com?Subject=KnewtonJobApp">tony+website@varblob.com</a><span>tony+website@varblob.com</span>
+      <abr title="Email">{{fa-icon "envelope fa-fw"}}</abr> <a href="mailto:davidszajngarten.com?Subject=Comments about the duck army">davidszajngarten@gmail.com</a><span>davidszajngarten@gmail.com</span>
     </div>
     <div class="col-xs-12 col-sm-3">
-      <abr title="Phone">{{fa-icon "phone fa-fw"}}</abr> <a href="tel:3476888533">(347) 688-8533</a><span>(347) 688-8533</span>
+      <abr title="Phone">{{fa-icon "phone fa-fw"}}</abr> <a href="tel:+447908211060">+44 79 0821 1060</a><span>+44 79 0821 1060</span>
     </div>
     <div class="col-xs-12 col-sm-3">
       <a href="javascript:window.print()">{{fa-icon "print f-fw"}} Print this page</a>
